Fix up some of the work

--- a/scss/global-css-vars.css
+++ b/scss/global-css-vars.css
@@ -1,33 +1,21 @@
-
 /* Base
    ========================================================================== */
 
 :root {
   font-size: 62.5%;
-  --gray-0:    #FFFFFF;
-  --gray-50:   #FDFDFD;
-  --gray-100:  #FAFAFB;
-  --gray-200:  #F2F2F4;
-  --gray-300:  #E7E7E9;
-  --gray-400:  #D7D7D9;
-  --gray-500:  #C2C2C5;
-  --gray-600:  #A7A7AA;
-  --gray-700:  #858587;
-  --gray-800:  #5D5D5E;
-  --gray-900:  #2F2F30;
-  --gray-1000: #000000;
-  --blue-0:    #D1D6FF;
-  --blue-50:   #C2C8FE;
-  --blue-100:  #B3BBFC;
+  --gray-50:   #F2F2F2;
+  --gray-100:  #E6E6E6;
+  --gray-200:  #CCCCCC;
+  --gray-300:  #B3B3B3;
+  --gray-400:  #999999;
+  --gray-500:  #808080;
+  --gray-600:  #666666;
+  --gray-700:  #4D4D4D;
+  --gray-800:  #333333;
+  --gray-900:  #000000;
   --blue-200:  #959EF8;
-  --blue-300:  #7A83F0;
-  --blue-400:  #6369E6;
   --blue-500:  #4F51D9;
-  --blue-600:  #443FC7;
   --blue-700:  #3D32B0;
-  --blue-800:  #382795;
-  --blue-900:  #311D76;
-  --blue-1000: #271457;
 }
 
 :root {
@@ -44,12 +32,6 @@
 
 body {
   font-size: 1.6rem;
-  font-family: Arial, sans-serif;
-}
-
-
-
-body {
   line-height: 1.5;
   font-family: Inter, sans-serif;
   padding: 2.4rem;
@@ -77,8 +59,12 @@ h1, h2, h3 {
   font-weight: 700;
 }
 
-a {
-  color: --var(--link-color);
+a, a:link, a:visited {
+  color: var(--link-color);
+}
+
+strong {
+  color: var(--gray-800);
 }
 
 /* Preview
@@ -89,6 +75,12 @@ a {
   border: 0.1rem solid var(--gray-400);
   max-height: 30rem;
   overflow: scroll;
+}
+
+.c-preview-header {
+  font-size: 1.4rem;
+  font-weight: 500;
+  padding: 0 0 .4rem;
 }
 
 /* Textarea
@@ -104,3 +96,20 @@ a {
 .c-textarea--code {
   font-family: monospace;
 }
+
+/* Main container
+   ========================================================================== */
+
+.main-container {
+  display: flex;
+}
+
+.main-container main {
+  flex: 1 1 auto;
+}
+
+.main-container aside {
+  flex: 0 0 24rem;
+  margin-right: 2.4rem;
+}
+
